[metadata]
name = rhodonea-mapper
version = 1.0
description = A Django app to draw rhodoneas on Google Maps
long_description = file: README.md
author_email = me@eclecticboy.xyz
license = BSD 3-Clause License
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
